# biggie

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  compose.monitoring.yaml  compose.yaml  docker-compose.app.yml  docker-compose.core.yml  docker-compose.main.yml  docker-compose.mongo.yml  docker-compose.monitoring.yml  docker-compose.sonar.yml  docker-compose.yml  pyproject.toml  sonar-dev.sh  sonar-project.properties  update_release_tags.py
.github/workflows/: .coveragerc  cd.yml  ci.yml  codeql-analysis.yml  codeql-v2.yml  codeql.yml  docker-ci-v2.yml  docker-ci-v3.yml  docker-ci.yml  sonarqube.yml  teleport.yml  update-all-release-tags.yml
api/: Dockerfile  Dockerfile-api  config.py  main.py  pyproject.toml
api/src/: __init__.py
api/src/db/: models.py  schemas.py
api/src/db/mongo/: models.py  py_object_id.py  schemas.py
api/src/db/postgres/: models.py  schemas.py
api/src/libs/: test_lib.py
api/src/routers/: api_endpoints.py  data_lib.py  dummy_endpoint.py  github_events.py  mongo_endpoints.py
api/static/css/: main.css
api/templates/: base.html  characters_view.html  dashboard.html  details.html  per_country_view_paginated.html  row.html  table_head.html  title.html
api/templates/github_events/: dashboard.html  dashboard_title.html  details.html  details_title.html  row.html  table_head.html
api/test/: base_test.py  conftest.py  lib_test.py  test_api_endpoints.py  test_dummy.py
api/test/fixtures/: test_live_dummy_expected_results.json
app/: Dockerfile  config.py  main.py  pyproject.toml
app/src/db/: mongo.py
app/src/harvester/: Dockerfile  __init__.py  requirements.txt  utils.py
app/src/routers/: __init__.py  api_endpoints.py
app/src/spark/: mongo_connectors.py  runner.py
app/src/tasks/: harvester_task.py  spark_task.py
app/templates/: base.html  row.html
app/test/: base_test.py  test_api_endpoints.py  test_celery.py  test_mongo.py  test_spark.py
app/test/fixtures/: tasks.py
celery/: Dockerfile  config.py  pyproject.toml  tasks.py  worker.py
celery_app/: Dockerfile  config.py  pyproject.toml
celery_app/src/commons/: logs.py  names.py
celery_app/src/harvester/: __init__.py  asyncio_operations.py  auth_parameters.py  errors.py  get_poc_input_data.py  github_events_urls.py  utils.py
celery_app/src/pyspark/: connectors.py  dataframe_maker.py  jobs.py  mongo_connectors.py  postgres_connectors.py  runner.py  schemas.py
celery_app/src/sparky/: dataframe_maker.py  mongo_connectors.py  postgres_connectors.py  runner.py  session.py
celery_app/src/tasks/: github_events_cleaning.py  github_events_data_acquisition.py  github_events_load.py  schedules.py  ukr_dp_data_acquisition.py
celery_app/test/: conftest.py
celery_app/test/celery/: test_celery.py
celery_app/test/harvester/: test_harvester.py
celery_app/test/pyspark/: base_test.py  test_mongo.py  test_postgres.py  test_spark.py
celery_app/test/pyspark/fixtures/: dataframe_fixture.py
celery_app/test/sparky/: base_test.py  test_1_session.py  test_dataframe_maker.py  test_mongo.py  test_postgres.py  test_session.py  test_spark.py
celery_app/test/sparky/fixtures/: dataframe_fixture.py  mongo_schema.py  postgres_model.py
commons/: enums.py  json_utils.py  logging.py  logs.py  names.py  utils.py
conf/mongo/: mongod.conf
conf/pgadmin/: servers.json
conf/postgres/: Dockerfile
conf/spark/: Dockerfile
db/: mongo.py  postgres.py  postgres_db.py
db/mongo/: Dockerfile  (+3 more)
dev/: mongo_schemas.py
harvester/: Dockerfile  Dockerfile-harvester  __init__.py  config.py  pyproject.toml  requirements.txt
harvester/src/: asyncio_operations.py  utils.py
harvester/test/: conftest.py  test_harvester.py
nginx/: Dockerfile  certificate.conf.example  containers.conf.example
notebook/: Dockerfile
orchestrator/: Dockerfile  config.py  pyproject.toml  rabbitmq.conf  run.sh  worker.py
orchestrator/src/: __init__.py
orchestrator/src/harvester/: __init__.py  asyncio_operations.py  errors.py
orchestrator/src/harvester/commons/: asyncio_operations.py
orchestrator/src/harvester/github_events/: github_events_urls.py
orchestrator/src/spark_jobs/: jobs.py  mongo_connectors.py  postgres_connectors.py  session.py
orchestrator/src/spark_jobs/commons/: mongo_connectors.py
orchestrator/src/spark_jobs/github_events/: events_mongo_connectors.py  schemas.py
orchestrator/src/tasks/: dummy_spark_task.py  github_events_data_acquisition.py  github_events_load.py  schedules.py
orchestrator/src/tasks/dummy/: dummy_spark_task.py  dummy_task.py
orchestrator/src/tasks/github_events/: github_events_data_acquisition.py  github_events_load.py
orchestrator/test/: conftest.py
orchestrator/test/celery/: test_spark_job.py
orchestrator/test/harvester/: test_harvester.py
orchestrator/test/harvester/commons/: test_harvester.py
orchestrator/test/harvester/github_events/: test_harvester.py
orchestrator/test/spark_jobs/: base_test.py  test_1_session.py  test_dataframe_maker.py  test_mongo.py  test_postgres.py
orchestrator/test/spark_jobs/commons/: test_1_session.py  test_dataframe_maker.py  test_mongo.py  test_postgres.py
orchestrator/test/spark_jobs/fixtures/: postgres_model.py
orchestrator/test/spark_jobs/utils/: base_test.py
orchestrator/test/tasks/: test_dummy_task.py  test_spark_job.py
orchestrator/test/tasks/dummy/: test_dummy_spark_task.py  test_dummy_task.py
pyspark/: Dockerfile
pyspark_app/: Dockerfile  __init__.py  config.py  pyproject.toml
pyspark_app/src/: jobs.py  mongo_connectors.py  runner.py
pyspark_app/test/: base_test.py  test_mongo.py  test_spark.py
rabbit-mq/: Dockerfile
spark/: Dockerfile  Dockerfile-spark  __init__.py  config.py  pyproject.toml
spark/src/: jobs.py  mongo_connectors.py  runner.py
spark/test/: base_test.py  test_mongo.py  test_spark.py
spark/test/fixtures/: dataframe_fixture.py  tasks.py
spark_cluster/: Dockerfile  spark-defaults.conf
sparkluster/: Dockerfile  pyproject.toml  start_master.py
terraform/: create_env.sh  main.tf  main_services.tf  variables.tf
utils/: json_utils.py
(+22 files in other folders)
