[tool.poetry]
name = "biggie"
version = "0.4.7"
package-mode = false
description = "Dev setup"
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
black = "==24.8.0"
flake8 = "==7.1.1"
isort = "==5.13.2"
pre-commit = "==3.8.0"
pylint = "==3.2.7"
debugpy = "==1.8.5"

[build-system]
requires = ["poetry_core>=1.8.3"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.git
  | \.mypy_cache
  | \.venv
  | \__pycache__
)/
'''
