[tool.poetry]
name = "biggie"
version = "0.5.7"
package-mode = false
description = "Biggie. Dev setup"
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
black = "==24.10.0"
flake8 = "==7.1.1"
isort = "==5.13.2"
pre-commit = "==4.0.1"
pylint = "==3.3.3"
debugpy = "==1.8.11"

[build-system]
requires = ["poetry_core>=1.8.3"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.git
  | \.mypy_cache
  | \.venv
  | \__pycache__
)/
'''
