[tool.poetry]
name = "biggie"
version = "0.4.7"
package-mode = false
description = "Biggie. FastAPI containers (test & prod)"
authors = ["Pierre-Edouard Barrault"]

[build-system]
requires = ["poetry_core>=1.8.3"]
build-backend = "poetry.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "==0.114.0"
httpx = "==0.27.2"
Jinja2 = "==3.1.4"
loguru = "==0.7.2"
packaging = "==24.1"
pandas = "==2.2.2"
plotly = "==5.24.0"
# psycopg-binary = "==3.2.1"        # might be necessary with more endpoints/tests
pydantic = "==2.9.1"
pydantic-settings = "==2.4.0"
pymongo = "==4.8.0"
SQLAlchemy = "==2.0.34"             # previous version was 1.4.54
typing = "3.7.4.3"                  # issues with installing the latest version 3.10.0.0
tzlocal = "==5.2"
uvicorn = "==0.30.6"

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.2"
pytest-cov = "==5.0.0"

[tool.pytest.ini_options]
pythonpath = [ "/opt/api", ]
filterwarnings = [
    "error"
]

[tool.coverage.run]
relative_files = true
source = ["."]

[tool.coverage.report]
show_missing = true
