[tool.poetry]
name = "biggie"
version = "0.5.7"
package-mode = false
description = "Biggie. API containers (test & prod). Based on FastAPI"
authors = ["Pierre-Edouard Barrault"]

[build-system]
requires = ["poetry_core>=1.8.3"]
build-backend = "poetry.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "==0.115.6"
httpx = "==0.28.1"
Jinja2 = "==3.1.5"
loguru = "==0.7.3"
packaging = "==24.2"
pandas = "==2.2.3"
plotly = "==5.24.1"
# psycopg-binary = "==3.2.1"        # might be necessary with more endpoints/tests
pydantic = "==2.10.4"
pydantic-settings = "==2.7.0"
pymongo = "==4.10.1"
starlette = "==0.41.3"
SQLAlchemy = "==2.0.36"             # previous version was 1.4.54
typing = "3.7.4.3"                  # issues with installing the latest version 3.10.0.0
uvicorn = "0.34.0"
websockets = "==14.1"               # might not be required, trying to handle CSP issues with static files

[tool.poetry.group.security.dependencies]
idna = "==3.10"

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.4"
pytest-cov = "==6.0.0"

[tool.pytest.ini_options]
pythonpath = [ "/opt/api", ]
filterwarnings = [
    "error"
]

[tool.coverage.run]
# relative_files = true
source = ["."]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "/opt/data/api_coverage_html_report"
