[tool.poetry]
name = "biggie"
version = "0.1.0"
description = "Docker toolkit to spin up spark/mongo/fastapi altogether to ingest and expose data."
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"   # pinned after fastapi docker image
aiofiles = "==0.8.0"
aiohttp = "==3.8.1"
asyncio = "==3.4.3"
bson = "==0.5.10"
celery = "==5.2.6"
fastapi = "==0.75.2"
Jinja2 = "==3.1.2"
numpy = "==1.22.3"
pandas = "==1.4.2"
pydantic = "==1.9.0"
pymongo = "==4.1.1"
pyspark = "==3.2.1"
pytest = "==7.1.2"
python-dateutil = "==2.8.2"
python-dotenv = "==0.20.0"
requests = "==2.27.1"
typing = "==3.7.4.3"
uvicorn = "==0.17.6"

[tool.poetry.dev-dependencies]
black = "==22.3.0"
flake8 = "==4.0.1"
isort = "==5.10.1"
pre-commit = "==2.19.0"
pylint = "==2.13.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    # "ignore::UserWarning",
]
