[tool.poetry]
name = "biggie"
version = "0.3.2"
description = "Celery containers (prod and test)"
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
celery = "==5.2.7"
fastapi = "==0.75.2"
pandas = "==1.4.2"
pydantic = "==1.9.0"
pymongo = "==4.1.1"
pytest = "==7.1.2"
typing = "==3.7.4.3"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ "/opt/celery", ]
filterwarnings = [
    "error"
]
