[tool.poetry]
name = "biggie"
version = "0.4.5"
description = "Biggie. Celery containers (test & prod)"
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aiohttp = "==3.10.5"
asyncio = "==3.4.3"
celery = "==5.4.0"
importlib_metadata = "==3.10"       # TODO: check if necessary
loguru = "==0.7.2"
# pandas = "==1.4.3"
pandas = "==2.2.2"
psycopg-binary = "==3.2.1"
pydantic = "==2.9.1"
pymongo = "==4.8.0"                 # TODO: check if necessary
pyspark = "==3.5.2"
pytest = "==8.3.2"
pytest-asyncio = "==0.24.0"
requests = "==2.32.3"
SQLAlchemy = "==1.4.54"
# SQLAlchemy = "==2.0.34"
# typing = "==3.10.0.0"
typing = "3.7.4.3"
# warnings for these 2 (blockers on fix/update end 2022)
chardet = "==5.2.0"
urllib3 = "==1.26.20"
# urllib3 = "==2.2.2"

[build-system]
requires = ["poetry_core>=1.8.3"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ "/opt/celery_app", ]
asyncio_mode = "strict"
filterwarnings = [
    "error",
    "ignore::pytest.PytestCollectionWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # see references
    # https://github.com/celery/kombu/issues/1339
    # https://github.com/celery/celery/issues/7528
    "ignore::DeprecationWarning"    # to avoid DeprecationWarning due to Celery
]
