[tool.poetry]
name = "biggie"
version = "0.5.1"
package-mode = false
description = "Biggie. Celery containers (test & prod)"
authors = ["Pierre-Edouard Barrault"]

[build-system]
requires = ["poetry_core>=1.8.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiohttp = "==3.10.5"
asyncio = "==3.4.3"
celery = "==5.4.0"
loguru = "==0.7.2"
pandas = "==2.2.2"
psycopg2 = "==2.9.9 "
pydantic-settings = "==2.4.0"
pymongo = "==4.8.0"
pyspark = "==3.5.2"
requests = "==2.32.3"
setuptools = "==75.1.0"
SQLAlchemy = "==2.0.34"             # previous version was 1.4.54
typing = "3.7.4.3"                  # issues with installing the latest version 3.10.0.0

[tool.poetry.group.security.dependencies]
certifi = "==2024.8.30"
idna = "==3.9"

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.2"
pytest-asyncio = "==0.24.0"
pytest-cov = "==5.0.0"

[tool.pytest.ini_options]
pythonpath = [ "/opt/celery_app", ]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"       # function, class, module, package, session
filterwarnings = [
    "error",
    "ignore::pytest.PytestCollectionWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # see references
    # https://github.com/celery/kombu/issues/1339
    # https://github.com/celery/celery/issues/7528
    "ignore::DeprecationWarning"    # to avoid DeprecationWarning due to Celery
]

[tool.coverage.run]
# relative_files = true
source = ["."]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "/opt/data/celery_coverage_html_report"
