[tool.poetry]
name = "biggie"
version = "0.3.2"
description = "Harvester containers (prod and test)"
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
asyncio = "==3.4.3"
aiohttp = "==3.8.1"
pydantic = "==1.9.0"
requests = "==2.27.1"
pytest = "==7.1.2"
typing = "==3.7.4.3"
pytest-asyncio = "==0.18.3"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
# Cf. https://github.com/pytest-dev/pytest-asyncio#modes
asyncio_mode = "strict"

# TODO: check why this was breaking 1 test
# filterwarnings = [
#     "error"
# ]
