[project]
name = "biggie"
version = "0.5.8"
description = "Biggie. Orchestrator containers (test & prod). Based on Celery"
authors = ["Pierre-Edouard Barrault"]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiohttp==3.11.11",
    "asyncio==3.4.3",
    "celery==5.4.0",
    "loguru==0.7.3",
    "pandas==2.2.3",
    "psycopg2==2.9.10",
    "pydantic-settings==2.7.0",
    "pymongo==4.10.1",
    "pyspark==3.5.3",
    "requests==2.32.3",
    "setuptools==75.6.0",
    "SQLAlchemy==2.0.36",             # previous version was 1.4.54
    "typing==3.7.4.3"                  # issues with installing the latest version 3.10.0.0
]

[dependency-groups]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0"
]
security = [
    "certifi==2024.12.14",
    "idna==3.10"
]

[tool.pytest.ini_options]
pythonpath = [ "/opt/orchestrator", ]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"       # function, class, module, package, session
filterwarnings = [
    "error",
    "ignore::pytest.PytestCollectionWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # see references
    # https://github.com/celery/kombu/issues/1339
    # https://github.com/celery/celery/issues/7528
    "ignore::DeprecationWarning"    # to avoid DeprecationWarning due to Celery
]

[tool.coverage.run]
# relative_files = true
source = ["."]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "/opt/data/orchestrator_coverage_html_report"
