[tool.poetry]
name = "biggie_spark"
version = "0.2.0"
description = "Spark containers (prod and test)"
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"   # pinned after fastapi docker image
pandas = "==1.4.2"
pydantic = "==1.9.0"
pymongo = "==4.1.1"
pyspark = "==3.2.1"
pytest = "==7.1.2"
typing = "==3.7.4.3"

[tool.poetry.dev-dependencies]
black = "==22.3.0"
flake8 = "==4.0.1"
isort = "==5.10.1"
pre-commit = "==2.19.0"
pylint = "==2.13.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::pytest.PytestCollectionWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]
