[tool.poetry]
name = "biggie_spark"
version = "0.3.2"
description = "Spark containers (prod and test)"
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "==1.4.2"
pydantic = "==1.9.0"
pymongo = "==4.1.1"
pyspark = "==3.2.1"
pytest = "==7.1.2"
typing = "==3.7.4.3"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::pytest.PytestCollectionWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]
