[tool.poetry]
name = "biggie"
version = "0.4.0"
description = "Biggie. Spark cluster containers (test & prod)"
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
psycopg2-binary = "==2.9.3"
pyspark = "==3.3.0"
pytest = "==7.1.2"

[build-system]
requires = ["poetry_core>=1.1.14"]  # not working with 1.1.7 and python3.10.4
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ "/opt/sparkluster", ]
